--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,14 @@ Flask-Migrate==4.0.5
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.9
 MarkupSafe==2.1.5
+packaging==24.2
 ps==0.1.0
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
@@ -24,7 +26,7 @@ python-dotenv==1.0.0
 pytz==2025.1
 six==1.17.0
 SQLAlchemy==2.0.23
+SQLAlchemy-serializer==1.4.12
 typing_extensions==4.12.2
 Werkzeug==2.3.7
 zipp==3.20.2
-python-dotenv==1.0.0
